--- a/package.json
+++ b/package.json
@@ -16,6 +16,12 @@
         "browser-sync": "^2.23.6",
         "browser-sync-webpack-plugin": "^1.2.0",
         "cross-env": "^5.1",
+        "eslint": "^4.16.0",
+        "eslint-config-standard": "^11.0.0-beta.0",
+        "eslint-plugin-import": "^2.8.0",
+        "eslint-plugin-node": "^5.2.1",
+        "eslint-plugin-promise": "^3.6.0",
+        "eslint-plugin-standard": "^3.0.1",
         "jquery": "^3.2",
         "laravel-mix": "^2.0",
         "lodash": "^4.17.4",
