--- a/package.json
+++ b/package.json
@@ -26,13 +26,18 @@
         "laravel-mix": "^2.0",
         "lodash": "^4.17.4",
         "react": "^15.4.2",
-        "react-dom": "^15.4.2"
+        "react-dom": "^15.4.2",
+        "redux-action-creator": "^2.2.0",
+        "redux-logger": "^3.0.6",
+        "redux-thunk": "^2.2.0"
     },
     "dependencies": {
+        "immutable": "^3.8.2",
         "react-loadable": "^5.3.1",
         "react-redux": "^5.0.6",
         "react-router": "^4.2.0",
         "react-router-redux": "^5.0.0-alpha.9",
-        "redux": "^3.7.2"
+        "redux": "^3.7.2",
+        "redux-immutable": "^4.0.0"
     }
 }
