--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "redux-thunk": "^2.2.0"
     },
     "dependencies": {
+        "foundation-sites": "^6.4.4-rc1",
         "immutable": "^3.8.2",
         "react-loadable": "^5.3.1",
         "react-redux": "^5.0.6",
