--- a/package.json
+++ b/package.json
@@ -34,7 +34,10 @@
     "dependencies": {
         "foundation-sites": "^6.4.4-rc1",
         "immutable": "^3.8.2",
+        "mobile-detect": "^1.4.1",
+        "query-string": "^5.0.1",
         "react-loadable": "^5.3.1",
+        "react-paginate": "^5.0.0",
         "react-redux": "^5.0.6",
         "react-router": "^4.2.0",
         "react-router-redux": "^5.0.0-alpha.9",
