--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "react-redux": "^5.0.6",
         "react-router": "^4.2.0",
         "react-router-redux": "^5.0.0-alpha.9",
+        "react-select": "^1.2.1",
         "redux": "^3.7.2",
         "redux-immutable": "^4.0.0"
     }
