--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "foundation-sites": "^6.4.4-rc1",
         "immutable": "^3.8.2",
         "mobile-detect": "^1.4.1",
+        "prop-types": "^15.6.0",
         "query-string": "^5.0.1",
         "react-loadable": "^5.3.1",
         "react-paginate": "^5.0.0",
@@ -43,6 +44,7 @@
         "react-router-redux": "^5.0.0-alpha.9",
         "react-select": "^1.2.1",
         "redux": "^3.7.2",
-        "redux-immutable": "^4.0.0"
+        "redux-immutable": "^4.0.0",
+        "reselect": "^3.0.1"
     }
 }
