--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
         "foundation-sites": "^6.4.4-rc1",
         "halogenium": "^2.2.3",
         "mobile-detect": "^1.4.1",
-        "react-loader": "^2.4.2"
+        "react-loader": "^2.4.2",
+        "recharts": "^1.0.0-beta.10"
     }
 }
